# nlab-modbus

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  base_modbus_device.py  pyproject.toml  register_specs.py
.gitea/workflows/: build.yaml
.github/workflows/: build.yaml
docs/: RELEASING.md
examples/: geiger_calibration_visualisation.ipynb  geiger_calibration_visualisation.qmd  geiger_dose_measurement.ipynb  sipm_measurement.ipynb
gui/: main_app.py
gui/controller/: main_controller.py  tab_controller.py
gui/resources/: resources.qrc
gui/view/: device_tab.ui  main_window.ui
scripts/: build_nuitka.py  build_pyinstaller.py  check_release_tag.py  connection_test.py  device_test.ipynb  geiger_calibration_visualisation.ipynb  geiger_dose_measurement.ipynb  geiger_dose_measurement.qmd  gui_compiler.py  sipm_test.py  utilities.py
src/nlab_modbus/: __init__.py  calibration.py  manager.py
src/nlab_modbus/core/: base_modbus_device.py  enums.py  register_specs.py
src/nlab_modbus/data/: geiger_default_calibration.csv
src/nlab_modbus/devices/: geiger.py  psu.py  sipm.py
src/nlab_modbus/discovery/: factory.py  scan.py
src/nlab_modbus/gui/: main_app.py
src/nlab_modbus/gui/controller/: main_controller.py  tab_controller.py
src/nlab_modbus/gui/model/: log_handler.py  register_tables.py  ring_buffer.py
src/nlab_modbus/gui/resources/: resources_rc.py
src/nlab_modbus/gui/view/: device_tab.ui  main_window.ui
src/nlab_modbus/maps/: geiger_map.py  psu_map.py  sipm_map.py
src/nlab_modbus/services/: manager.py  polling_worker.py
wiki/: geiger_calibration_visualisation.md
