[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nlab-modbus"
dynamic = ["version"]
description = "Modbus RTU driver and desktop GUI for SiPM bias boards, Geiger-Mueller radiation probes, and photomultiplier HV power supplies"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Kamil Brylew", email = "kamil.brylew@nuclear-lab.com" },
]
requires-python = ">=3.11"
dependencies = [
    "pymodbus==3.13.0",
    "pyserial==3.5",
    "zeroconf==0.149.16",
    "numpy==2.4.6",
]

[project.optional-dependencies]
gui = [
    "pyqtgraph==0.14.0",
    "PySide6==6.11.1",
]
dev = [
    "matplotlib==3.10.9",
    "pip-licenses==5.5.5",
    "jupyter==1.1.1",
    "bump-my-version==1.4.1",
]
build = [
    "nuitka==4.1.2",
    "ordered-set==4.1.0",
    "zstandard==0.25.0",
]

[project.scripts]
nlab-modbus-gui = "nlab_modbus.gui.main_app:main"

[project.urls]
Repository = "https://github.com/nucliflare/nlab-modbus"

[tool.setuptools.dynamic]
version = {attr = "nlab_modbus._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nlab_modbus.data" = ["*.csv"]

[tool.bumpversion]
current_version = "0.2.2"
commit = true
tag = true
tag_name = "v{new_version}"
tag_message = "Release {new_version}"
message = "chore: bump version {current_version} -> {new_version}"
allow_dirty = false

[[tool.bumpversion.files]]
filename = "src/nlab_modbus/_version.py"
